log
Wed 22 Mar 2023 01:39:22 AM UTC: 
 tests:  0|6
total_score: 0/70
f5c6886
Thu 23 Mar 2023 03:18:01 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:61:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   61 |   lista->head=n;
      |   ^~~~~
      |   list
list.c:61:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
996deb4
Thu 23 Mar 2023 03:18:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8839c83
Thu 23 Mar 2023 03:23:31 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:11: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   39 |   if(!list->first) return NULL;
      |           ^~
list.c:40:21: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   40 |   list->current=list->first;
      |                     ^~
list.c:41:14: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   41 |   return(list->first->data)
      |              ^~
list.c:41:28: error: expected ‘;’ before ‘return’
   41 |   return(list->first->data)
      |                            ^
      |                            ;
   42 |     return NULL;
      |     ~~~~~~                  
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e23d6a5
Thu 23 Mar 2023 03:24:47 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
bb43fe7
Thu 23 Mar 2023 03:27:42 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
0287269
Thu 23 Mar 2023 03:30:04 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 15/70
68846a0
Thu 23 Mar 2023 03:30:52 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |   if(!list->next) return NULL;
      |           ^~
list.c:46:21: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |   list->current=list->next;
      |                     ^~
list.c:47:14: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   47 |   return(list->next->data);
      |              ^~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fbb146b
Thu 23 Mar 2023 03:31:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |   if(!list->next) return NULL;
      |           ^~
list.c:46:21: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |   list->current=list->next;
      |                     ^~
Compilation failed
a6e4abb
